--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -13,13 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-
-    - name: Install dependencies
-      run: make
-
-    - name: Run check
-      run: make check
-
-    - name: Run distcheck
-      run: make distcheck
+    
+    - run: make
